tests/rustdoc-ui/intra-doc/assoc-item-not-in-scope.stderr
error: unresolved link to `S::fmt`
  --> $DIR/assoc-item-not-in-scope.rs:4:15
   |
LL | /// Link to [`S::fmt`]
   |               ^^^^^^ the struct `S` has no field or associated item named `fmt`
   |
note: the lint level is defined here
  --> $DIR/assoc-item-not-in-scope.rs:1:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

